--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,8 +34,8 @@ html {
 }
 
 .button__container {
-    border: 2px solid blue;
-    border-radius: 5px;
+    border: 2px solid var(--color-background);
+    /* border-radius: 5px; */
     width: 200px;
     height: 80px;
     padding: 10px 30px;
@@ -56,7 +56,7 @@ html {
     /* border: 1px solid green; */
     height: 75px;
     background-color: var(--color-background);
-    box-shadow: 0px 5px 10px rgb(236, 236, 236);
+    box-shadow: 10px 10px 10px rgb(236, 236, 236);
     padding: 13px 25px;
 }
 
@@ -92,11 +92,12 @@ html {
     /* border: 2px solid red; */
     width: 95%;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     /* padding: 5px 10px; */
     flex-wrap: wrap;
-    box-shadow: 10px 10px 10px rgb(239, 239, 239);
+    box-shadow: 0px 0px 20px rgb(226, 226, 226);
     border-radius: 10px;
+    padding: 15px 15px;
 }
 
 .form__row {
@@ -107,6 +108,8 @@ html {
     gap: 10px;
     width: 100%;
     padding: 10px 10px;
+    /* border: 2px solid springgreen; */
+    margin-bottom: 10px;
 }
 
 .form__item {
@@ -129,4 +132,25 @@ html {
 .form__input:focus {
     border-color: var(--color-background);
     outline: none;
+}
+
+.btn__enviar {
+    padding: 10px 25px;
+    border: none;
+    background-color: var(--color-background);
+    color: white;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.btn__enviar:hover {
+    background-color: #00668b;
+}
+
+.form__select {
+    width: 100%;
+    height: 33px;
+    border-color: #e3e3e3;
+    outline: none;
+    border-radius: 5px;
 }
