--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,7 +23,8 @@ html {
 }
 
 .buttons {
-    border: 2px solid red;
+    /* border: 2px solid red; */
+    /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
     border-radius: 10px;
     width: 70%;
     height: 100%;
@@ -90,7 +91,7 @@ html {
 /* Formulario para agregar */
 
 .formulario {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 85%;
     display: flex;
     justify-content: center;
@@ -261,9 +262,15 @@ html {
 
 .formulario__pension {
     margin: 0 auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+/* Formulario de pensiones */
+.contenedor__formulario {
+    padding: 20px 30px;
+
 }
