--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,6 +103,8 @@ th {
     background-color: var(--color-background);
     box-shadow: 10px 10px 10px rgb(236, 236, 236);
     padding: 13px 25px;
+    display: flex;
+    align-items: center;
 }
 
 .navegacion__btn-regreso {
@@ -115,6 +117,15 @@ th {
     align-items: center;
     /* margin-top: 10px; */
     transition: all 300ms ease-in-out;
+}
+
+.navegacion__logo-contenedor {
+    width: 100%;
+}
+
+.logo__navegacion {
+    width: 17%;
+    margin-left: 30px;
 }
 
 .btn-regreso__icon {
@@ -253,6 +264,8 @@ th {
     table-layout: fixed;
     width: 100%;
 
+    margin-bottom: 30px;
+
 }
 
 
@@ -328,6 +341,7 @@ th {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+    row-gap: 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -358,6 +372,7 @@ th {
 .btn__full {
     width: 100%;
     height: 50px;
+    margin-top: 30px;
     margin-bottom: 40px;
 }
 
@@ -384,4 +399,101 @@ th {
 
 .icono__btn-excel {
     font-size: 20px;
+}
+
+/* -----------Modal------------- */
+
+.modalFondo {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    /* Para hacer scroll fluido */
+}
+
+.modal {
+    background-color: white;
+    width: 75%;
+    max-height: 90vh;
+    /* Limita el alto del modal al 90% del viewport */
+    overflow-y: auto;
+    /* Agrega desplazamiento si el contenido es muy largo */
+    padding: 30px 40px;
+    border-radius: 10px;
+}
+
+.formEditar__campo {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.etiqueta__form {
+    white-space: nowrap;
+    margin: auto 0;
+    font-size: 20px;
+}
+
+.cancelar__icono-contenedor {
+    width: 100%;
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: end;
+}
+
+.icono__cerrar {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.formulario__btn-contenedor {
+    width: 100%;
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: end;
+    padding: 10px 15px;
+    gap: 20px;
+}
+
+.formulario__btn {
+    padding: 8px 16px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.btn__guardar {
+    background-color: var(--color-background);
+}
+
+.btn__cancelar {
+    background-color: red;
+}
+
+/* -------- Botones creados con JS----------- */
+.btn__fBuscar {
+    width: 100%;
+    margin-bottom: 10px;
+    border: none;
+    cursor: pointer;
+    color: white;
+    padding: 5px 3px;
+}
+
+.btnEditar__fBuscar {
+    background-color: var(--color-background);
+}
+
+.btnEditar__fEliminar {
+    background-color: red;
 }
